--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
 
     <html>
-    <!-- Comentario de edición de página de inicio -->
+    <!-- COMENTAARIO DE PRUEBA -->
 
     <head>
 
